# Mock-Robotic-System

./: Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
src/camera_sensor_pkg/: package.xml  setup.cfg  setup.py
src/camera_sensor_pkg/camera_sensor_pkg/: camera_sensor_node.py
src/control_pkg/: package.xml  setup.cfg  setup.py
src/control_pkg/control_pkg/: control_node.py
src/localization_pkg/: package.xml  setup.cfg  setup.py
src/localization_pkg/localization_pkg/: localization_node.py
src/mapping_pkg/: package.xml  setup.cfg  setup.py
src/mapping_pkg/mapping_pkg/: mapping_node.py
