<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping_pkg</name>
  <version>0.0.0</version>
  <description>Mapping Node</description>
  <maintainer email="student@ltu.se">student</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>